test: update unit tests to match QA fixes
- CommentServiceTest: remove authorId from CreateCommentRequest builders,
  fix updateComment/deleteComment call signatures (ticketId added),
  add ownership validation tests for wrong ticketId
- TicketServiceTest: replace findAll() stubs with findByRole(DEVELOPER),
  fix noDevelopers test to use empty findByRole result,
  add test for Bug#4 (non-DEVELOPER assignee throws IllegalArgumentException)
- ProjectServiceTest: add UserRepository mock (required after Perf#2 fix),
  use shared timestamp in restoreProject cascade test,
  add test verifying individually-deleted tickets are NOT restored on cascade

All 69 tests pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>